--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1000">
                     <div class="about-img">
                         <div class="profile-img-container">
-                            <img src="images/1739262329141.jpg" alt="Avi Mehta" class="profile-img">
+                            <img src="images/1739262329141.jpeg" alt="Avi Mehta" class="profile-img">
                         </div>
                     </div>
                 </div>
@@ -290,7 +290,7 @@
                                 <div class="icon-box">
                                     <i class="fas fa-map-marker-alt"></i>
                                     <h3>Location</h3>
-                                    <p>Chanakyapuri, New Delhi, India - 110021</p>
+                                    <p>New Delhi, India - 110021</p>
                                 </div>
                             </div>
                             <div class="col-md-6 mb-4">
@@ -311,7 +311,7 @@
                                 <div class="icon-box">
                                     <i class="fas fa-globe"></i>
                                     <h3>Website</h3>
-                                    <p><a href="https://ivathen.netlify.app" target="_blank">ivathen.netlify.app</a></p>
+                                    <p><a href="https://avimeh.netlify.app" target="_blank">avimeh.netlify.app</a></p>
                                 </div>
                             </div>
                         </div>
