--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="project-card">
                         <div class="project-img cyber-border">
-                            <img src="images/9efb919e2db3a06b0508218ea96806d9.jpg" alt="Object Detection Model" class="project-image">
+                            <img src="images/imli.jpg" alt="Object Detection Model" class="project-image">
                         </div>
                         <div class="project-content">
                             <h3>Object Detection Model - Yolov7</h3>
@@ -221,7 +221,7 @@
                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="project-card">
                         <div class="project-img cyber-border">
-                            <img src="images/7a99588edcd1818b2f1eb37f4b736964.jpg" alt="Lecture Scribe" class="project-image">
+                            <img src="images/lecture.jpg" alt="Lecture Scribe" class="project-image">
                         </div>
                         <div class="project-content">
                             <h3>Lecture Scribe</h3>
