--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero-section">
-        <div class="hero-bg-image" style="background-image: url('images/7a99588edcd1818b2f1eb37f4b736964.jpg');"></div>
+        <div class="hero-bg-image" style="background-image: url('images/landing.gif');"></div>
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-md-12 text-center">
