--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                 <div class="icon-box">
                                     <i class="fas fa-globe"></i>
                                     <h3>Website</h3>
-                                    <p><a href="https://avimeh.netlify.app" target="_blank">avimeh.netlify.app</a></p>
+                                    <p><a href="https://ivathen.netlify.app" target="_blank">ivathen.netlify.app</a></p>
                                 </div>
                             </div>
                         </div>
