--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <!-- Embedded Systems Team Intern 2023 -->
                         <div class="timeline-item" data-aos="fade-up" data-aos-delay="200">
                             <div class="timeline-content">
-                                <span class="date">June 2023 – July 2023</span>
+                                <h1>class="date">June 2023 – July 2023</h1>
                                 <h3>Embedded Systems Team, Intern</h3>
                                 <h4>3rdiTech - IIT Delhi, New Delhi</h4>
                                 <ul>
